--- a/style.css
+++ b/style.css
@@ -4,15 +4,34 @@
     box-sizing: border-box;
 }
 
+:root{
+    --text-color:white;
+    --bg-url:url(./bg-desktop.jpg);
+    --stroke-color: rgba(255, 255, 255, 0.5);
+    --surface-color:rgba(0, 0, 0, 0.05);
+    --surface-color-hover: rgba(255, 255, 255, 0.05);
+    --highlight-color: rgba(255, 255, 255, 0.2);
+
+}
+
+
+.light{
+    --text-color: black;
+    --bg-url:url(./bg-desktop-light.jpg);
+    --stroke-color: rgba(0, 0, 0, 0.5);
+    --surface-color:rgba(0, 0, 0, 0.05);
+    --surface-color-hover: rgba(0, 0, 0, 0.02);
+    --highlight-color: rgba(0, 0, 0, 1);
+}
 
 body{
-    background-image: url(./bg-desktop.jpg); 
+    background-image: var(--bg-url)
 
 }
 
 body *{
     font-family: 'Inter', sans-serif;
-    color: #ffffffff;
+    color: var(--text-color)
 
 }
 
@@ -39,22 +58,21 @@ body *{
 
 ul{
     list-style: none;
-
     display: flex;
     flex-direction: column;
     gap: 16px;
-    padding: 24px  0;
+    padding: 20px  0;
 }
 
 ul li a{
     display: flex;
-    border: 1px solid red;
+   
     height: 52px;
     align-items: center;
     justify-content: center;
     padding: 16px 24px;
-    background: rgba(255, 255, 255, 0.1);
-    border: 2px solid  rgba(255, 255, 255, 0.5);
+    background: var(--surface-color);
+    border: 2px solid var(--stroke-color);
     border-radius: 8px;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -64,8 +82,8 @@ ul li a{
 }
 
 ul li a:hover{
-    background: rgba(255, 255, 255, 0.05);
-    border: 1.5px solid white;
+    background: var(--surface-color-hover);
+    border: 1.5px solid var(--text-color);
 }
 
 #social-links{
@@ -73,9 +91,18 @@ ul li a:hover{
     justify-content: center;
     padding: 24px 0;
     font-size: 24px;
-    gap: 32px;
+}
+
+#social-links a{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 16px;
+    transition: background 0.2s;
+    border-radius: 50%;
 }
 
 #social-links a:hover{
+    background: var(--highlight-color)
 
 }
