--- a/style.css
+++ b/style.css
@@ -6,22 +6,26 @@
 
 :root{
     --text-color:white;
-    --bg-url:url(./bg-desktop.jpg);
+    --bg-url:url(./imagens/bg-desktop.jpg);
     --stroke-color: rgba(255, 255, 255, 0.5);
-    --surface-color:rgba(0, 0, 0, 0.05);
-    --surface-color-hover: rgba(255, 255, 255, 0.05);
+    --surface-color:rgba(255, 255, 255, 0.05);
+    --surface-color-hover: rgba(0, 0, 0, 0.02);
     --highlight-color: rgba(255, 255, 255, 0.2);
+    --switch-bg-url: url(./imagens/moon-stars.svg);
+    
 
 }
 
 
 .light{
     --text-color: black;
-    --bg-url:url(./bg-desktop-light.jpg);
+    --bg-url:url(./imagens/bg-desktop-light.jpg);
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color:rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
-    --highlight-color: rgba(0, 0, 0, 1);
+    --highlight-color: rgba(0, 0, 0, 0.1);
+    --switch-bg-url: url(./imagens/sun.svg);
+  
 }
 
 body{
@@ -55,6 +59,38 @@ body *{
     font-weight: 500;
     line-height: 24px;
 }
+
+
+#switch{
+    border: 1px solid red;
+    position: relative;
+}
+
+
+#switch button {
+    width: 32px;
+    height: 32px;
+    background: white var(--switch-bg-url) no-repeat center;
+    border: 0;
+    border-radius: 50%;
+
+    position: absolute;
+    right: 0;
+    z-index: 1;
+
+}
+
+#switch span{
+    display: block;
+    width: 64px;    
+    height: 24px;
+    background: var(--surface-color);
+    border: 1px solid var(--stroke-color);
+    backdrop-filter: blur(4px); 
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 9999px;
+}
+
 
 ul{
     list-style: none;
@@ -106,3 +142,4 @@ ul li a:hover{
     background: var(--highlight-color)
 
 }
+
