--- a/style.css
+++ b/style.css
@@ -62,8 +62,9 @@ body *{
 
 
 #switch{
-    border: 1px solid red;
     position: relative;
+    width: 64px;
+    margin: 4px auto;
 }
 
 
@@ -75,10 +76,22 @@ body *{
     border-radius: 50%;
 
     position: absolute;
-    right: 0;
+    top: 50%;
+    left: 0;
     z-index: 1;
+    transform: translateY(-50%);
 
 }
+
+
+.light #switch button{
+    right: 0;
+    left: initial;
+} 
+
+
+
+
 
 #switch span{
     display: block;
