--- a/style.css
+++ b/style.css
@@ -6,38 +6,33 @@
 
 :root{
     --text-color:white;
-    --bg-url:url(./imagens/bg-desktop.jpg);
+    --bg-url:url(./imagens/bg-mobile.jpg);
     --stroke-color: rgba(255, 255, 255, 0.5);
     --surface-color:rgba(255, 255, 255, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
     --highlight-color: rgba(255, 255, 255, 0.2);
     --switch-bg-url: url(./imagens/moon-stars.svg);
-    
-
 }
 
 
 .light{
     --text-color: black;
-    --bg-url:url(./imagens/bg-desktop-light.jpg);
+    --bg-url:url(./imagens/bg-mobile-light.jpg);
     --stroke-color: rgba(0, 0, 0, 0.5);
     --surface-color:rgba(0, 0, 0, 0.05);
     --surface-color-hover: rgba(0, 0, 0, 0.02);
     --highlight-color: rgba(0, 0, 0, 0.1);
     --switch-bg-url: url(./imagens/sun.svg);
-  
 }
 
 body{
-    background-image: var(--bg-url);
+    background: var(--bg-url) no-repeat top center/cover;
     height: 100vh;
-
 }
 
 body *{
     font-family: 'Inter', sans-serif;
     color: var(--text-color)
-
 }
 
 #container{
@@ -50,7 +45,6 @@ body *{
 #profile{
     text-align: center;
     padding: 24px;
-    margin-top: 8px;
 }
 
 #profile img{
@@ -60,6 +54,7 @@ body *{
 #profile p{
     font-weight: 500;
     line-height: 24px;
+    margin-top: 8px;
 }
 
 
@@ -82,17 +77,18 @@ body *{
     left: 0;
     z-index: 1;
     transform: translateY(-50%);
-
+    animation: slide-back 0.2s;
 }
 
 
 .light #switch button{
-    right: 0;
-    left: initial;
+    animation: slide-in 0.2s forwards;
+}
+
+
+ #switch button:hover{
+    outline: 8px solid var(--highlight-color);
 } 
-
-
-
 
 
 #switch span{
@@ -117,13 +113,11 @@ ul{
 
 ul li a{
     display: flex;
-   
-    height: 52px;
     align-items: center;
     justify-content: center;
     padding: 16px 24px;
     background: var(--surface-color);
-    border: 2px solid var(--stroke-color);
+    border: 1px solid var(--stroke-color);
     border-radius: 8px;
     backdrop-filter: blur(4px);
     -webkit-backdrop-filter: blur(4px);
@@ -154,10 +148,9 @@ ul li a:hover{
 }
 
 #social-links a:hover{
-    background: var(--highlight-color)
-
-    
+    background: var(--highlight-color)   
 }
+
 
 @media (min-width: 700px){
     :root {
@@ -167,5 +160,23 @@ ul li a:hover{
     .light{
         --bg-url: url(./imagens/bg-desktop-light.jpg);
 
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left:0;
+    }
+    to {
+        left:50%
+    }
+}
+
+@keyframes slide-back {
+    from{
+        left:50%
+    }
+    to {
+        left:0
     }
 }
